# adaptive-radix-tree

./: .devcontainer.json  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  TASK_COMPLETION.md  create_release.sh  results.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
bench/: art.cpp  delete.cpp  insert.cpp  main.cpp  memory.cpp  mixed.cpp  mixed_dense.cpp  node_0.cpp  node_16.cpp  node_256.cpp  node_4.cpp  node_48.cpp  query.cpp  query_iteration.cpp  query_sparse_uniform.cpp  query_sparse_uniform_64.cpp  query_sparse_zipf.cpp  remove.cpp  zipf.hpp
include/: art.hpp
include/art/: algorithms.hpp  art.hpp  child_it.hpp  children_iterator.hpp  constants.hpp  inner_node.hpp  leaf_node.hpp  node.hpp  node_0.hpp  node_16.hpp  node_256.hpp  node_4.hpp  node_48.hpp  pair.hpp  preorder_traversal_iterator.hpp  tree_it.hpp
report/: .gitignore  .latexmkrc  art.aux  art.bbl  art.bib  art.blg  art.dvi  art.fdb_latexmk  art.fls  art.ps  art.pyg  art.tex
report/_minted-art/: 1AF6C67F715F2EA10CD947A5E592F62EE1018FAC6E8BBECDADDEEE71495154AC.pygtex  AD0B8EEA412462A48E552D28E96A66C7E1018FAC6E8BBECDADDEEE71495154AC.pygtex  C7A57B08609EFE5B3D2615FCFBD8C1C6E1018FAC6E8BBECDADDEEE71495154AC.pygtex  default.pygstyle
report/images/: IFIlogo.eps  art_nodes_draw.eps  dbtgBW.eps  trie_s1_draw.eps  trie_s2_draw.eps
src/: CMakeLists.txt  example.cpp
test/: art.cpp  inner_node.cpp  main.cpp  node.cpp  node_16.cpp  node_256.cpp  node_4.cpp  node_48.cpp  tree_it.cpp
